[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Enemy/Core/EnemyProjectileCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://DEV_ExampleUsages/Ex_LevelCreationTest/MegaMan_Level/EnemyObj/Icicle.gd" type="Script" id=2]
[ext_resource path="res://Assets/Database/Enemy/Icicle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/Enemies/MM7_Icicle.png" type="Texture" id=4]



[sub_resource type="Animation" id=1]
resource_name = "Destroying"
tracks/0/type = "method"
tracks/0/path = NodePath("./../..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "queue_free_start"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../BulletBehavior:active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( -5, -10, 6, -10, 0.5, 10 )

[node name="Icicle" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
_database = ExtResource( 3 )
damage_area_nodes = [ NodePath("DamageArea") ]

[node name="DelayStartTimer" type="Timer" parent="." index="0"]
one_shot = true

[node name="BulletBehavior" parent="." index="1"]
active = false
speed = 0.0
gravity = 900.0

[node name="Sprite" parent="SpriteMain" index="0"]
visible = false
texture = ExtResource( 4 )
hframes = 3

[node name="IciAni" type="AnimationPlayer" parent="SpriteMain/Sprite" index="0"]
anims/Destroying = SubResource( 1 )
"anims/New Anim" = SubResource( 2 )

[node name="DamageArea" type="Area2D" parent="." index="7"]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 3 )
disabled = true
[connection signal="timeout" from="DelayStartTimer" to="." method="_on_DelayStartTimer_timeout"]
